Added text onto image
Going with foreground image rather than background image

--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Kaarthic P.</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 		<header>
-			<img src="img/background.jpg">
+			<div>
+			<!-- Use image as not background so that everything below will line up well -->
+			 	<img src="img/background.jpg">
+			 	<h3>Hello me cool</h3>
+			</div>
 		</header>
 		<main>
 
-				
-				<!-- <div class="outer">
-				    <div class="header">Bye</div>
-				</div> -->
-				<div class="header">Hi</div>
+				<!--<a href = "https://www.google.ca"> using quotations makes path relative -->
+				<div class="header"><a href = https://www.google.ca> HI</a></div>
 
-				<pre>
-				</pre>
-
-				
-				<h1>First Heading</h1>
+				<h1 class="pls">First Heading</h1>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
 
