--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kaarthic P.</title>
+	<title>Kaarthic Pulogarajah</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
 		<header>
 			<div class="container">
 			
-			 	<img src="img/background.jpg">
+			 	<img class = "back" src="img/background2.jpg">
 			 	
-			 	<h3 class="center">Hello me cool</h3>
+			 	<h3 class="iam">I am a <br> </h3>
+			 	<h4 class="title"> Mechanical Engineer</h4>
+			 	<a href=https://www.google.ca class="button1">Portfolio</a>
+			 	<a href=https://www.google.ca class="button2">Experience</a>
 			 	
 			</div>
 		</header>
 		<main>
 
 				<!--<a href = "https://www.google.ca"> using quotations makes path relative -->
-				<div class="header"><a href = https://www.google.ca>HI</a></div>
+				<div class="header"><a href = https://www.google.ca><div>Kaarthic Pulogarajah    Portfolio   Experience</div></a></div>
 
-				<!-- <h1 class="pls">First Heading</h1> -->
+				<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
 
-				<p class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim. Lorem ipsum dolor sit <!-- <img src="img/kaarthic.jpg"> -->
+				<p class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim. Lorem ipsum dolor sit
+				<br> <br> <img class= "face" src="img/kaarthic.jpg"> <br> <br>
 
 				amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
 
 				<h2>Second Heading</h2>
 				<p class="faded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
-
-				<h2>Third Heading</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
 			</main>
-
+			<footer>This is the footer</footer>
 </body>
 </html>
