Changes to header
- header fully functional (redirects to different websites)
- fonts changed
- titles added
- face picture made smaller

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 		<main>
 
 				<!--<a href = "https://www.google.ca"> using quotations makes path relative -->
-				<div class="header"><a href = https://www.google.ca><div>Kaarthic Pulogarajah    Portfolio   Experience</div></a></div>
+				<div class="header"><a href = https://www.google.ca>   <span class="headtext">Kaarthic Pulogarajah</span></a><a href = https://www.facebook.com><span>Portfolio</span></a>		<a href = https://www.youtube.com><span>Experience</span></a></div>
+
 
 				<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
 
-				<p class="col">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim. Lorem ipsum dolor sit
-				<br> <br> <img class= "face" src="img/kaarthic.jpg"> <br> <br>
+				<!-- <p class = "col">About Me</p> -->
+				<p class="col"><span class="about">About Me </span> <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim. Lorem ipsum dolor sit
+				<br> <br> <img class= "face" src="img/kaarthic.jpg" align="middle"> <br> <br>
 
-				amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
+				<span class="about">Personal Philosophy </span> <br><br>
+				amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio </p>
 
 				<h2>Second Heading</h2>
 				<p class="faded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
