Added real descriptions
-Added personal statements and formatted them
- added icon on tab

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Kaarthic Pulogarajah</title>
+	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 		<header>
@@ -20,8 +21,8 @@
 				
 				<h3 class="iam">I am a <br> </h3>
 			 	<h4 class="title"> Mechanical Engineer</h4>
-			 	<a href=https://www.google.ca class="button1">Portfolio</a>
-			 	<a href=https://www.google.ca class="button2">Experience</a> 
+			 	<a href="portfolio.html" class="button1">Portfolio</a>
+			 	<a href="experience.html" class="button2">Experience</a> 
 
 			 	<p id = "pad"></p>
 
@@ -29,14 +30,17 @@
 					<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
 
 					<!-- <p class = "col">About Me</p> -->
-					<p class="col"><span class="about">About Me </span> <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim. Lorem ipsum dolor sit
-					<br> <br> <img class= "face" src="img/kaarthic.jpg" align="middle"> <br> <br>
+					<div class="col"><p class="about">About Me </p>
+					<p class="space">I am a mechanical engineering student, passionate about creating innovative solutions to complex ideas.</p><br> <!-- This break is to seperate onto next line -->
 
-					<span class="about">Personal Philosophy </span> <br><br>
-					amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio </p>
+					<span class="about">Personal Philosophy </span> <br>"Success is a journey, not a destination."<br><br>
+					<img class= "face" src="img/kaarthic.jpg" align="middle"> <br> 
+
+					<p class="about2">Interests </p> <p>I enjoy projects that require continuous learning and application of knowledge to optimize designs. </p><br>
+					</div>
 
 					<h2>Second Heading</h2>
-					<p class="faded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
+					<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
 				</div>
 			</main>
 			<footer>This is the footer</footer>
