Added Portfolio highlights functionality
- code set up to properly insert images that can be clicked to see
details of highlight
- working opacity to display title of portfolio item on hover
- split into multiple css files
- add proper pictures, then start working on experience and portfolio
files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Kaarthic Pulogarajah</title>
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 		<header>
 			<div class="container">
@@ -39,8 +41,51 @@
 					<p class="about2">Interests </p> <p>I enjoy projects that require continuous learning and application of knowledge to optimize designs. </p><br>
 					</div>
 
-					<h2>Second Heading</h2>
-					<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim ligula at metus consectetur volutpat. Nunc sed faucibus mauris, id pharetra sapien. Praesent eu elit tellus. Phasellus facilisis turpis eget odio commodo ultrices in non turpis. Sed a massa elementum, porttitor lorem id, hendrerit est. Sed dapibus, libero sed tincidunt rhoncus, magna sem efficitur lacus, vitae rhoncus erat tellus a lacus. Donec in viverra quam. Mauris bibendum ante a mi feugiat euismod. Quisque in velit eget nisl commodo tincidunt sit amet in nulla. Vivamus ultricies nec mi in efficitur. Proin suscipit urna orci, sit amet finibus lectus tempor ullamcorper. Aenean nunc urna, imperdiet ac tristique eget, vulputate eu enim.</p>
+					<link rel="stylesheet" type="text/css" href="css/style2.css">
+
+					<h2>Portfolio Highlights</h2>
+
+				<!-- 	<ul class="img-list">
+	  					<li>					
+							<span>
+								<a href="portfolio.html">
+								<span class="text-content"><span>Place Name</span></span>
+								<img class = "portpics" src="img/wind tunnel2.jpg"/>
+								</a>
+							</span>
+						</li>
+						<li>					
+							<span>
+								<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"/>
+								<span class="text-content"><span>Place Name</span></span>
+								</a>
+							</span>
+						</li>
+						<li>					
+							<span>
+								<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"/>
+								<span class="text-content"><span>Place Name</span></span>
+								</a>
+							</span>
+						</li>
+					</ul> -->
+
+					<!-- <span class= "hide">Hello</span> -->
+					<span class="cont">
+						<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+						<p class="cent">1315-MH Wind Tunnel</p>
+					</span>
+					<span class="portpad"></span>
+					<span class="cont">
+						<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+						<p class="cent">Centered</p>
+					</span>
+					<span class="portpad"></span>
+					<span class="cont">
+						<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+						<p class="cent">Centered</p>
+					</span>
+
 				</div>
 			</main>
 			<footer>This is the footer</footer>
