--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Kaarthic Pulogarajah</title>
+	<link rel="shortcut icon" href="img/icon4.png"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
+</head>
+<body>
 <main>
 	<p>I AM PORTFOLIO</p>
 </main>
-</head>
+</body>
 </html>
