Structure ready to populate portfolio and experience
Done:
- index page has right images and right media queries (it is done
working on)
- portfolio and experience pages have proper title and background

To be done:
- fix image and text spacing for c++ page
- fix media queries for all new pages
- work on having folders of html files
- put in html files for all projects

--- a/experience.html
+++ b/experience.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<main>
-	<p>I AM EXPERIENCE</p>
-</main>
+	<title>Kaarthic Pulogarajah</title>
+	<link rel="shortcut icon" href="img/icon4.png"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
+<header>
+			<div class="container">
+			
+			 	<img class = "back" src="img/background2.jpg">
+			</div>
+</header>
+<body>
+<main>
+
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+
+	<p id = "titleP">Experience</p>
+	<p id = "padP"></p>
+	<div class = "box">
+	<p class="intro">Here you will find</p>
+	</div>
+
+</main>
+</body>
 </html>
