--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</header>
 		<body>
 		<main>
-				<div class="header"><a href = https://kaarthicpulogarajah.github.io/>   <span class="headtext">Kaarthic Pulogarajah</span></a><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+				<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
 				
 				<h3 class="iam">I am a <br> </h3>
@@ -28,7 +28,7 @@
 
 			 	<p id = "pad"></p>
 
-			 	<div id = "box">
+			 	<div class = "box">
 					<p class="intro">Here you will find find a collection of my projects and designs - some academic, and some just for fun.</p>
 
 					<!-- <p class = "col">About Me</p> -->
@@ -41,53 +41,27 @@
 					<p class="about2">Interests </p> <p>I enjoy projects that require continuous learning and application of knowledge to optimize designs. </p><br>
 					</div>
 
-					<link rel="stylesheet" type="text/css" href="css/style2.css">
+					
 
 					<h2>Portfolio Highlights</h2>
 
-				<!-- 	<ul class="img-list">
-	  					<li>					
-							<span>
-								<a href="portfolio.html">
-								<span class="text-content"><span>Place Name</span></span>
-								<img class = "portpics" src="img/wind tunnel2.jpg"/>
-								</a>
-							</span>
-						</li>
-						<li>					
-							<span>
-								<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"/>
-								<span class="text-content"><span>Place Name</span></span>
-								</a>
-							</span>
-						</li>
-						<li>					
-							<span>
-								<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"/>
-								<span class="text-content"><span>Place Name</span></span>
-								</a>
-							</span>
-						</li>
-					</ul> -->
-
-					<!-- <span class= "hide">Hello</span> -->
 					<span class="cont">
-						<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-						<p class="cent">1315-MH Wind Tunnel</p>
+						<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+						<p class="cent" id="wind">1315-MH Wind Tunnel</p>
 					</span>
 					<span class="portpad"></span>
 					<span class="cont">
-						<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-						<p class="cent">Centered</p>
+						<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
+						<p class="cent" id="solid">3D Modelling</p>
 					</span>
 					<span class="portpad"></span>
 					<span class="cont">
-						<a href="portfolio.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-						<p class="cent">Centered</p>
+						<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
+						<p class="cent" id="cpp">C++ Projects</p>
 					</span>
 
 				</div>
 			</main>
-			<footer>This is the footer</footer>
+			<footer></footer>
 </body>
 </html>
