--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,36 @@
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
+<header>
+			<div class="container">
+			
+			 	<img class = "back" src="img/background2.jpg">
+			</div>
+</header>
 <body>
 <main>
-	<p>I AM PORTFOLIO</p>
+
+	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+
+	<p id = "titleP">Portfolio</p>
+	<p id = "padP"></p>
+	<div id = "boxP">
+		<span class="cont">
+			<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+			<p class="cent" id="wind">1315-MH Wind Tunnel</p>
+		</span>
+		<span class="portpad"></span>
+		<span class="cont">
+			<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
+			<p class="cent" id="solid">3D Modelling</p>
+		</span>
+		<span class="portpad"></span>
+		<span class="cont">
+			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
+			<p class="cent" id="cpp">C++ Projects</p>
+		</span>
+	</div>
+
 </main>
 </body>
 </html>
