optimized for mobile
works for mobile, but not computer screen

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 					
 
 					<h2>Portfolio Highlights</h2>
-					<div>
+					<div style= "display: inline";>
+
 						<span class="cont">
 							<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
 							<p class="cent" id="wind">1315-MH Wind Tunnel</p>
