C++ page almost done
-images and links added for cpp.html
- add readMe for code files
- zooming still not figured out

--- a/cpp.html
+++ b/cpp.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="img/icon4.png"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
-	<link rel="stylesheet" type="text/css" href="css/media.css">
+	<link rel="stylesheet" type="text/css" href="css/media	.css">
 </head>
 <header>
 			<div class="container">
@@ -16,43 +16,45 @@
 </header>
 <body>
 <main>
+	
+		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
-	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
-
-	<p id = "titleP">C++ Projects</p>
-	<p id = "padP"></p>
-	<div id = "boxP">
-		<span class="cont">
-			<a href="portfolio.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">Battleship</p>
-		</span>
-		<span class="portpad"></span>
-		<span class="cont">
-			<a href="portfolio.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">Vandermonde Matrix</p>
-		</span>
-		<span class="portpad"></span>
-		<span class="cont">
-			<a href="portfolio.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">Connect Four</p>
-		</span>
-
-		<span class="cont">
-			<a href="portfolio.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">2048</p>
-		</span>
-		<span class="portpad"></span>
-		<span class="cont">
-			<a href="portfolio.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">Mastermind</p>
-		</span>
-		<span class="portpad"></span>
-		<span class="cont">
-			<a href="portfolio.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">Matrix Inverse</p>
-		</span>
-	</div>
-
+		<p id = "titleP">C++ Projects</p>
+		<p id = "padP"></p>
+	<!-- <div class="col"> -->
+		<div id = "boxP">
+			<span class="cont">
+				<a href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
+				<p class="cent" id="battleship">Battleship</p>
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<a href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
+				<p class="cent" id="wind">Vandermonde Matrix</p>
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<a href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
+				<p class="cent" id="solid">Connect Four</p>
+			</span>
+			<br><br>
+			<span class="cont">
+				<a href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
+				<p class="cent" id="game">2048</p>
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<a href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
+				<p class="cent" id="cpp">Mastermind</p>
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<a href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
+				<p class="cent" id="solid">Matrix Inverse</p>
+			</span>
+		</div>
+	<!-- </div> -->
 </main>
+<footer></footer>
 </body>
 </html>
