3D modelling page partially complete
- 3D page mostly done
- media q doesnt work for this page???
- javascript used for this page, figure out how that works
- c++ page finished

--- a/3d.html
+++ b/3d.html
@@ -1,1 +1,218 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Kaarthic Pulogarajah</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="shortcut icon" href="img/icon4.png"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css/media	.css">
+	
+</head>
+<header>
+			<div class="container">
+			
+			 	<img class = "back" src="img/background2.jpg">
+			</div>
+</header>
+<body>
+<main>
+
+		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
+
+		<p class = "titleP">3D Modelling</p>
+		<p class = "padP"></p>
+		<div class = "boxP">
+			<span class="cont">
+				<img id = "portpic6" src="img/battleship.jpg">
+				<p class="cent wind">Formula Motorsports</p>
+
+				<div id="myModal6" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img06">
+				</div>
+				<script>
+					var modal = document.getElementById('myModal6');
+
+				// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic6");
+					var modalImg = document.getElementById("img06");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    captionText.innerHTML = "team";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[0];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<img id = "portpic1" src="img/waterpump.jpg">
+				<p class="cent cpp">Water Pump</p>
+
+				<div id="myModal1" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img01">
+				  <div id="caption1"></div>
+				</div>
+				<script>
+				var modal = document.getElementById('myModal1');
+
+				// Get the image and insert it inside the modal
+				var img = document.getElementById("portpic1");
+				var modalImg = document.getElementById("img01");
+				var captionText = document.getElementById("caption1");
+				img.onclick = function(){
+				    modal.style.display = "block";
+				    modalImg.src = this.src;
+				    captionText.innerHTML = "HELLO";
+				}
+
+				// Get the <span> element that closes the modal
+				var span = document.getElementsByClassName("close")[1];
+
+				// When the user clicks on <span> (x), close the modal
+				span.onclick = function() { 
+				    modal.style.display = "none";
+				}
+				</script>
+
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<img id = "portpic2" src="img/cellphonestand.png">
+				<p class="cent solid">Cell Phone Stand</p>
+
+				<div id="myModal2" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img02">
+				</div>
+				<script>
+					var modal = document.getElementById('myModal2');
+
+				// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic2");
+					var modalImg = document.getElementById("img02");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    captionText.innerHTML = "team";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[2];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+			</span>
+			<br><br>
+			<span class="cont">
+				<img id = "portpic3" src="img/Trophy Base.jpg">
+				<p class="cent game">Trophy</p>
+
+				<div id="myModal3" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img03">
+				</div>
+				<script>
+					var modal = document.getElementById('myModal3');
+
+				// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic3");
+					var modalImg = document.getElementById("img03");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    captionText.innerHTML = "team";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[3];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<img id = "portpic4" src="img/matinv.png">
+				<p class="cent solid">ME100</p>
+
+				<div id="myModal4" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img04">
+				</div>
+				<script>
+					var modal = document.getElementById('myModal4');
+
+				// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic4");
+					var modalImg = document.getElementById("img04");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    captionText.innerHTML = "team";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[4];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
+			</span>
+			<span class="portpad"></span>
+			<span class="cont">
+				<img id = "portpic5" src="img/horse4.jpg">
+				<p class="cent solid">Rocking Horse</p>
+
+				<div id="myModal5" class="modal">
+				  <span class="close">&times;</span>
+				  <img class="modal-content" id="img05">
+				</div>
+				<script>
+					var modal = document.getElementById('myModal5');
+
+				// Get the image and insert it inside the modal
+					var img = document.getElementById("portpic5");
+					var modalImg = document.getElementById("img05");
+					img.onclick = function(){
+					    modal.style.display = "block";
+					    modalImg.src = this.src;
+					    captionText.innerHTML = "team";
+					}
+
+					// Get the <span> element that closes the modal
+					var span = document.getElementsByClassName("close")[5];
+
+					// When the user clicks on <span> (x), close the modal
+					span.onclick = function() { 
+					    modal.style.display = "none";
+					}
+				</script>
+
+			</span>
+		</div>
+
+
+</main>
+<footer></footer>
+</body>
+</html>
