--- a/experience.html
+++ b/experience.html
@@ -19,8 +19,8 @@
 
 	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
-	<p id = "titleP">Experience</p>
-	<p id = "padP"></p>
+	<p class = "titleP">Experience</p>
+	<p class = "padP"></p>
 	<div class = "box">
 	<p class="intro">Here you will find</p>
 	</div>
