--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 
 						<span class="cont">
 							<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-							<p class="cent" id="wind">1315-MH Wind Tunnel</p>
+							<p class="cent wind">1315-MH Wind Tunnel</p>
 						</span>
 						<span class="portpad"></span>
 						<span class="cont">
 							<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
-							<p class="cent" id="solid">3D Modelling</p>
+							<p class="cent solid">3D Modelling</p>
 						</span>
 						<span class="portpad"></span>
 						<span class="cont">
 							<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
-							<p class="cent" id="cpp">C++ Projects</p>
+							<p class="cent cpp">C++ Projects</p>
 						</span>
 					</div>
 
