--- a/cpp.html
+++ b/cpp.html
@@ -19,38 +19,37 @@
 	
 		<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
-		<p id = "titleP">C++ Projects</p>
-		<p id = "padP"></p>
-	<!-- <div class="col"> -->
-		<div id = "boxP">
+		<p class = "titleP">C++ Projects</p>
+		<p class = "padP"></p>
+		<div class = "boxP">
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
-				<p class="cent" id="battleship">Battleship</p>
+				<p class="cent battleship">Battleship</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
-				<p class="cent" id="wind">Vandermonde Matrix</p>
+				<p class="cent wind">Vandermonde Matrix</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
-				<p class="cent" id="solid">Connect Four</p>
+				<p class="cent solid">Connect Four</p>
 			</span>
 			<br><br>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
-				<p class="cent" id="game">2048</p>
+				<p class="cent game">2048</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
-				<p class="cent" id="cpp">Mastermind</p>
+				<p class="cent cpp">Mastermind</p>
 			</span>
 			<span class="portpad"></span>
 			<span class="cont">
 				<a href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
-				<p class="cent" id="solid">Matrix Inverse</p>
+				<p class="cent solid">Matrix Inverse</p>
 			</span>
 		</div>
 	<!-- </div> -->
