--- a/portfolio.html
+++ b/portfolio.html
@@ -19,22 +19,22 @@
 
 	<div class="header"><a href = "index.html"/>   <span >Kaarthic Pulogarajah</span></a><span class="headtext"></span><a href = "portfolio.html"><span>Portfolio</span></a>		<a href = "experience.html"><span>Experience</span></a></div>
 
-	<p id = "titleP">Portfolio</p>
-	<p id = "padP"></p>
-	<div id = "boxP">
+	<p class = "titleP">Portfolio</p>
+	<p class = "padP"></p>
+	<div class = "boxP">
 		<span class="cont">
 			<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-			<p class="cent" id="wind">1315-MH Wind Tunnel</p>
+			<p class="cent wind">1315-MH Wind Tunnel</p>
 		</span>
 		<span class="portpad"></span>
 		<span class="cont">
 			<a href="3d.html"><img class = "portpics" src="img/waterpump.jpg"></a>
-			<p class="cent" id="solid">3D Modelling</p>
+			<p class="cent solid">3D Modelling</p>
 		</span>
 		<span class="portpad"></span>
 		<span class="cont">
 			<a href="cpp.html"><img class = "portpics" src="img/code.png"></a>
-			<p class="cent" id="cpp">C++ Projects</p>
+			<p class="cent cpp">C++ Projects</p>
 		</span>
 	</div>
 
